# rdflib-starlight

./: .gitignore  CHANGELOG.md  Expected behavior of parseQuery with SPA  LICENSE  README.md  future_enhancements.md  json_to_graph.py  performance.md  pyproject.toml  sparql12_design.md  split_simple.py  starlight_graph_model.md  starlight_vs_rdflib.md
.github/workflows/: test.yml
benchmarks/: README.md  bench_comparison.py  bench_fuseki.py  bench_fuseki_rdf11.py  bench_fuseki_rdfstar.py  bench_http.py  bench_inmemory.py  bench_oxigraph.py  bench_sqlite.py  bench_sqlite_plain_limit.py
docs/: future_enhancements.md  performance.md  rdflib-starlight.md  sparql12_design.md  starlight.md  starlight_vs_rdflib.md
examples/: sqlalchemy_store_demo.py  ttl12_roundtrip_demo.py
memory/: MEMORY.md  project_backend_targets.md
samples/: complex.ttl  example.ttl  rdf12_syntax.ttl  sparql12_to_11_output.txt  test.json  test.ttl  test_output.ttl  ttl 1.2 copy.ttl  ttl 1.2.ttl  ttl_1.2_output.txt
samples/ttl12_examples/: ex1.ttl  ex2.ttl  ex3.ttl  ex4.ttl  ex5.ttl
scripts/: generate_stepwise_output.py  parse_and_write.py  scaling_benchmark.py  ttl12_roundtrip_demo.py
starlight/: __init__.py  compare.py
starlight/backends/: native.py
starlight/graph/: __init__.py  adapter.py  starlight_conjunctive_graph.py  starlight_dataset.py  starlight_graph.py
starlight/model/: __init__.py  encoding.py  triple.py
starlight/parsers/: lexer.py  ntriples12.py  rdfxml12.py  split_simple.py  syntax.py  trig12.py  trix12.py  ttl_parser.py  turtle_parser.py
tests/: conftest.py  test_ttl_parser.py
w3c_turtle_tests/: README.md  download_w3c_turtle_tests.py  manifest.csv  run_w3c_turtle_tests.py  w3c_notes.txt  w3c_test_output.txt
(+32 files in other folders)
