[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdflib-starlight"
version = "0.1.0"
description = "RDF 1.2 extension for rdflib — triple terms, reification, annotation folding, and SPARQL 1.2"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "John Clements", email = "clements.john.j@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.0",
    "requests>=2.28",
]
keywords = ["rdf", "rdf12", "semantic-web", "linked-data", "sparql", "turtle", "reification"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
sqlalchemy = ["rdflib-sqlalchemy>=0.5"]

[project.urls]
Homepage = "https://github.com/johnclements/rdflib-starlight"
Repository = "https://github.com/johnclements/rdflib-starlight"
Issues = "https://github.com/johnclements/rdflib-starlight/issues"

[tool.setuptools.packages.find]
include = ["starlight*"]

[tool.setuptools.package-data]
starlight = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring a running Fuseki or Oxigraph server",
]
